files/config/internal-lb/sample-app-ilb.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-frontend
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: sample-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-frontend-deployment
  labels:
    app: sample-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-frontend
  template:
    metadata:
      labels:
        app: sample-frontend
    spec:
      containers:
      - name: frontend
        image: acrpocpb.azurecr.io/frontend:latest
        ports:
        - containerPort: 80
